# hap.py

./: .gitignore  .pre-commit-config.yaml  .ycm_extra_conf.py  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakeLists.txt.py3  CMakePresets.json  DEVELOPMENT.md  Dockerfile  Dockerfile copy.ubuntu-with-tests  Dockerfile.ubuntu-with-tests  MIGRATION_SESSION_SUMMARY-2025-05-20.md  MIGRATION_SESSION_SUMMARY.md  MODERNIZATION_PLAN.md  MODERNIZATION_SUMMARY.md  PROGRESS.md  PROGRESS_REPORT.md  PR_DESCRIPTION.md  PYTHON3_CORE.md  PYTHON3_MIGRATION.md  PYTHON3_MIGRATION_FINAL.md  PYTHON3_MIGRATION_PROGRESS.md  PYTHON3_MIGRATION_REVISED.md  PYTHON3_MIGRATION_STATUS.md  PYTHON3_MIGRATION_SUMMARY.md  PYTHON3_MIGRATION_TOOLS.md  PYTHON3_MIGRATION_UPDATE.md  README.md  RELEASES.md  TRUNCATED_FILES_REPORT.md  automate_py3_updates.py  check_file_truncation.py  check_py3_issues.py  check_py3_issues_patch.py  configure.sh  conftest.py  development_plan.md  fix_exception_syntax.py  fix_remaining_py3_issues.py  (+34 more)
.claude/: settings.local.json
.codex/: config.json  plan_2025-05-19.md
.devcontainer/: devcontainer.json
.github/: README.md  copilot-instructions.md
.github/archive/: AGENTS.md  CMakeCache.txt  CMakeLists.txt.py3  Dockerfile.centos6  MIGRATION_GUIDE.md  MIGRATION_SESSION_SUMMARY.md  PYTHON3_MIGRATION_FINAL.md  PYTHON3_MIGRATION_PROGRESS.md  PYTHON3_MIGRATION_REVISED.md  PYTHON3_MIGRATION_STATUS.md  PYTHON3_MIGRATION_SUMMARY.md  PYTHON3_MIGRATION_TOOLS.md  PYTHON3_MIGRATION_UPDATE.md  README.md  ROADMAP.md  bioinformatics-prompts.md  check_file_truncation.py  continue-py3-migration.md  cython-modernization.instructions.md  diagnose_build.sh  environment-setup.md  fix_remaining_py3_issues.py  fix_truncated_files.py  format.md  happy.core-requirements.py3.txt  python-migration-help.md  python3-migration.instructions.md  run_all_py3_tests.sh  test_cython_integration.py  test_cython_integration_py3.sh  test_cython_module_py3.py  test_happy_py3.sh  test_py3_build.sh  test_string_handling.py  update_cython_for_py3.py  update_cython_modules_py3.py  validate_cpp_integration_enhanced.py
.github/instructions/: bioinformatics.instructions.md  cython-modernization.instructions.md  general-coding.instructions.md  (+7 more)
build_logs/: py3_test_summary.txt
cmake/: CPackConfig.cmake  ModernDependencies.cmake
doc/: README.md  build_system.md  cli_updates.md  cli_updates_status.md  dependency_management.md  development_plan.md  happy.md  ls_example.md  migration_summary.md  modernization_progress.md  next_session_prompt.md  normalisation.md  python3_migration.md  refgraph.md  sompy.md  spec.md  string_handling.md  vcfeval_best_practices.md
example/: bcfstats.txt
happy/: __init__.py
scratch/: cpp_migration.md
scripts/: README.md  demo_modernized.py  fix_python2_artifacts.py  generate_dashboard.py  generate_report.py  migrate_test.py  replace_preprocess.py  run_modernization.py  run_modernization_fixes.py  setup_project_config.py  simple_preprocess.py  standalone_preprocess.py  track_progress.py  validate_replacements.py
src/c++/lib/: CMakeLists.txt  CMakeLists.txt.py3
src/c++/lib/align/: Alignment.cpp  Klib.hh  KlibGlobal.hh
src/c++/lib/diploidgraphs/: DiploidComparisonResult.cpp  HaploCompare.cpp  Haplotype.cpp
src/c++/lib/quantify/: QuantifyRegions.cpp
src/c++/lib/scmp/: BlockAlleleCompare.cpp
src/c++/lib/tools/: IntervalBuffer.cpp
src/c++/lib/variant/: VariantProcessor.cpp  VariantReader.cpp
src/c++/main/: CMakeLists.txt  alleles.cpp  blocksplit.cpp  dipenum.cpp  gvcf2bed.cpp  hapcmp.cpp  hapenum.cpp  preprocess.cpp  validatevcf.cpp  vcfhdr2json.cpp  xcmp.cpp
src/c++/test/: CMakeLists.txt  test_distancebasedmatcher.cpp  test_haplocompare.cpp  test_haplotypes.cpp  test_locationinfo.cpp  test_main.cpp  test_refvar.cpp  test_variants.cpp
src/python/: CMakeLists.txt  CMakeLists.txt.py3  bamstats.py  cnx.py  ftx.py  hap.py  hap.py.py3  modern_dependencies.py  ovc.py  pre.py  pre.py.py3  qfy.py  qfy.py.py3  som.py
src/python/Haplo/: __init__.py  __init__.py.py3  blocksplit.py  blocksplit.py.py2.bak  blocksplit.py.py3  cython_compat.py  cython_mock.py  cython_util.pyx  gvcf2bed.py  happyroc.py  happyroc.py.py2.bak  happyroc.py.py3  happyroc.py.truncated.bak  happyroc.pyx  partialcredit.py  partialcredit.py.py2.bak  partialcredit_py3.py  python_blocksplit.py  python_hapcmp.py  python_preprocess.py  python_quantify.py  python_vcfcheck.py  quantify.py  quantify.py.py2.bak  quantify.py.py3  scmp.py  sequence_utils.py  sequence_utils.pyx  string_handling.py  variant_processing.pyx  variant_processor.py  variant_processor.pyx  vcfeval.py  vcfeval.py.py2.bak  vcfeval_py3.py  xcmp.py
src/python/Haplo/cython/: CMakeLists.txt  README.md  __init__.py  _internal.pyx  cpp_internal.pyx  cpp_internal.pyx.py2.bak  mock__internal.py  mock_cpp_internal.py  mock_internal.py
src/python/Haplo/tests/: test_cython_modernization.py  test_py3_compatibility.py
src/python/Somatic/: Mutect.py  Mutect.py.corrupted  Mutect_py3.py  Pisces.py  Pisces_py3.py  Strelka.py  Strelka.py.py2.bak  Strelka.py.py3  Strelka.py.truncated.bak  Varscan2.py  Varscan2_py3.py  __init__.py
src/python/Tools/: __init__.py  __init__.py.py3  bamstats.py  bcftools.py  bcftools.py.py3  bcftools.py.truncated.bak  bedintervaltree.py  bedintervaltree.py.py2.bak  bedintervaltree.py.py3  bgzip.py  bgzipfile.py  ci.py  ci.py.py2.bak  ci_py3.py  compat.py  fastasize.py  fastasize.py.py3  filesystem.py  io.py  logging_utils.py  metric.py  parallel.py  parallel.py.py3  remove_nonref_gt_variants.py  roc.py  roc.py.truncated.bak  roc_py3.py  sessioninfo.py  sessioninfo_py3.py  vcf.py  vcfcallerinfo.py  vcfextract.py  vcfextract.py.py3
src/python/Tools/bgzf/: __init__.py
src/python/happy/: __init__.py  cnx.py  ftx.py  hap.py  ovc.py  pre.py  qfy.py
tests/: README.md  conftest.py  test_cli.py  test_cli_source.py  test_cli_tools.py  test_cython_integration.py  test_ftx_debug.py  test_ftx_integration.py  test_happy_integration.py  test_qfy_integration.py  test_root_py3_compatibility.py  test_smoke.py  test_string_handling.py  utils.py
(+184 files in other folders)
