[project]
name = "happy"
version = "0.4.0"
description = "Haplotype Comparison Tools"
readme = "README.md"
requires-python = ">=3.7"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
black = "23.3.0"
isort = "5.12.0"
ruff = "0.0.262"
pyupgrade = "3.3.1"
mypy = "1.3.0"
types-requests = "*"
types-PyYAML = "*"
nox = "^2023.9.0"
numpy = "*"

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "numpy>=1.15.0",
    "Cython>=0.29.0",
]
build-backend = "setuptools.build_meta"
