[metadata]
name = happy
version = attr: happy.__version__
description = Haplotype comparison tools for benchmarking variant calls
long_description = file: README.md
long_description_content_type = text/markdown
author = Illumina
author_email = support@illumina.com
license = MIT
license_file = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
package_dir =
    = src
include_package_data = True
zip_safe = False
python_requires = >=3.6
install_requires =
    numpy>=1.19.0
    pandas>=1.3.0
    pysam>=0.19.0
    scipy>=1.7.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    black>=22.0
    flake8>=4.0
    mypy>=0.950
    isort>=5.10.0
test =
    pytest>=6.0
    pytest-cov>=2.0
    black>=22.0

[options.entry_points]
console_scripts =
    hap.py = happy.cli.hap:main
    som.py = happy.cli.som:main
    quantify = happy.cli.qfy:main
    preprocess = happy.cli.pre:main
